<?xml version="1.0"?>
<package format="2">
  <name>interiornet_to_rosbag</name>
  <version>1.0.0</version>
  <description>Tools for converting InteriorNet to ROS bag files.</description>

  <author email="ftaubner@student.ethz.ch">Felix Taubner </author>

  <maintainer email="ftaubner@student.ethz.ch">Felix Taubner</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_geometry</depend>
  <depend>opencv3_catkin</depend>
  <depend>rosbag</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>

</package>
